--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,45 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install Ansible
+        run: |
+          python3 -m pip install ansible boto boto3
+
+      - name: Set Ansible Python interpreter
+        run: |
+          ANSIBLE_PYTHON_INTERPRETER=`which python`
+          echo $ANSIBLE_PYTHON_INTERPRETER
+          echo "ANSIBLE_PYTHON_INTERPRETER=${ANSIBLE_PYTHON_INTERPRETER}" >> $GITHUB_ENV
+
+      - name: Set environment variable with timestamp for making sure Molecule would create unique AWS resources
+        run: |
+          TIMESTAMP=$(date --date "9 hours" "+%Y%m%d_%H%M%S")
+          echo "AWSIAM_USER=packer_wordpress_install_${TIMESTAMP}" >> $GITHUB_ENV
+          echo "AWSIAM_POLICY_NAME=packer_wordpress_install_${TIMESTAMP}" >> $GITHUB_ENV
+
+      - name: Retrieve Ansible playbook for creating AWS access key
+        uses: actions/checkout@v2
+        with:
+          repository: ansible-playbooks-mamono210/awsiam
+          path: awsiam
+
+      - name: Create AWS access key
+        run: |
+          cd awsiam
+          ansible-galaxy install -r roles/requirements.yml
+          ansible-playbook -i localhost, -c local \
+          -e "aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+          -e "aws_region=ap-northeast-1" \
+          -e "aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+          -e "awsiam_policy_file_path=../iam_policy.json" \
+          -e "awsiam_policy_name=${AWSIAM_POLICY_NAME}" \
+          -e "awsiam_user=${AWSIAM_USER}" \
+          -e "awsiam_user_state=present" \
+          -e "linux_group=runner" \
+          -e "linux_user=runner" \
+          -e "linux_userhome=/home/runner" \
+          install.yml
+
       - name: Install Packer
         run: |
           curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
@@ -34,17 +73,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install packer
 
-      - name: Install Ansible
-        run: |
-          python3 -m pip install ansible
-
-      - name: Update community.mysq
-        run: |
-          ansible-galaxy collection install community.mysql
-
-      - name: Retrieve Ansible playbooks
-        run: |
-          git clone https://github.com/ansible-playbooks-mamono210/wordpress_install.git
+      - name: Retrieve Ansible playbooks for creating AMI
+        uses: actions/checkout@v2
+        with:
+          repository: ansible-playbooks-mamono210/wordpress_install
+          path: wordpress_install
 
       - name: Set golden image ami id to environment variables
         run: |
@@ -54,10 +87,6 @@ jobs:
           --query 'Images[*][CreationDate, ImageId, Name]' \
           --output text | sort -r | awk 'NR==1 {print $2}')
           echo "SOURCE_AMI_ID=${SOURCE_AMI_ID}" >> $GITHUB_ENV
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Execute pakcer build command
         run: |
@@ -66,12 +95,27 @@ jobs:
 
           packer build \
           -var "ami_name=${AMI_NAME}" \
-          -var "aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
           -var "aws_region=${{ secrets.AWS_DEFAULT_REGION }}" \
-          -var "aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
           -var "source_ami_id=${SOURCE_AMI_ID}" \
           -var "tag_name=${TAG_NAME}" \
           build.json
+
+      - name: Delete AWS access key
+        run: |
+          cd awsiam
+          ansible-galaxy install -r roles/requirements.yml
+          ansible-playbook -i localhost, -c local \
+          -e "aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+          -e "aws_region=ap-northeast-1" \
+          -e "aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+          -e "awsiam_policy_file_path=../iam_policy.json" \
+          -e "awsiam_policy_name=${AWSIAM_POLICY_NAME}" \
+          -e "awsiam_user=${AWSIAM_USER}" \
+          -e "awsiam_user_state=absent" \
+          -e "linux_group=runner" \
+          -e "linux_user=runner" \
+          -e "linux_userhome=/home/runner" \
+          install.yml
 
       - name: Show Go version
         run: |
